# grammar-parser-webapp

./: .gitignore  package-lock.json  parse_conllu.py  pyproject.toml
biber/: biber.cpp  biber.hpp  biber_util.cpp  main.cpp  tokenizer.js
biber/murmurhash/: MurmurHash2.cpp
src/: cnn.py
src/util/: parse_conllu.py
webapp/: index.html  main.js  tag_to_id.json  vocab.json  worker.js
